# beepi-process-controller

./: .gitignore  README.md  extensions.py  index.html  main.py  makefile  manage.py  pyproject.toml  requirements.txt  utils.py
static/: main.js  tailwind-output.css
templates/: index.html  login.html  project.html
