[tool.poetry]
name = "process-controller"
version = "0.1.0"
description = ""
authors = ["ShanThatos <shanthkoka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^2.3.3"
waitress = "^2.1.2"
python-dotenv = "^1.0.0"
psutil = "^5.9.5"
pydantic = "^2.3.0"
gitpython = "^3.1.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
